# etc_design_player

./: .gitignore  LICENSE  README.md  check.sh  install.sh  manage.py  player.py  pyproject.toml
.github/workflows/: lint.yml  test.yml
etc_player/: __init__.py  admin.py  apps.py  models.py  player.py  settings.py  tests.py  urls.py  utils.py  views.py  wsgi.py
etc_player/management/commands/: play_audio.py
etc_player/migrations/: 0001_initial.py  0002_alter_playbacktimerange_options_and_more.py
etc_player/ops/: audio.service  audio.socket  player.nginx  player.py  player.service  player.socket
etc_player/templates/etc_player/: control.html
sites/mvc/: more.py
